<resources>
    <string name="app_name">VIEWTY</string>
    <string name="hello_search_fragment">Hello Search!</string>
    <string name="hello_board_fragment">Hello Board!</string>

    <string-array name="main_tab_items">
        <item>렌즈 리스트</item>
        <item>리뷰 게시판</item>
        <item>자유 게시판</item>
        <item>내 정보</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lenslist_graphic_dia">그래픽 직경: </string>
    <string name="lenslist_price">가격: </string>
    <string name="lenslist_score"> | 평점: </string>

    <string name="lensdetail_graphic_dia">그래픽직경</string>
    <string name="lensdetail_price">가격</string>

    <string name="like_text">좋아요</string>
    <string name="comment_text">댓글쓰기</string>
    <string name="share_text">공유</string>
    <string name="go_back">돌아가기</string>
    <string name="go_to_bottom">마지막 댓글로 이동</string>
    <string name="post">등록</string>
    <string name="cancel">취소</string>
    <string name="sort_type_time">시간순</string>

    <string name="delete_success">삭제되었습니다</string>
    <string name="modify_success">수정되었습니다</string>
    <string name="report_success">신고되었습니다</string>

    <string name="login_login">로그인</string>
    <string name="login_fail_for_server">서버이상으로 로그인에 실패했어요. 관리자에게 문의해주세요</string>
    <string name="login_fail_wrong_input">이메일과 비밀번호를 확인해주세요</string>
    <string name="login_email_hint">이메일을 입력해 주세요</string>
    <string name="login_password_hint">비밀번호를 입력해 주세요</string>
    <string name="login_email_empty">이메일을 입력해 주세요</string>
    <string name="login_email_invalid">올바른 이메일을 입력해 주세요</string>
    <string name="login_pw_empty">비밀번호를 입력해 주세요</string>
    <string name="login_pw_invalid">6~15자의 영문 대 소문자, 숫자 및 !@#만 사용가능합니다</string>
    <string name="login_find_id">아이디찾기</string>
    <string name="login_find_password">비밀번호 찾기</string>
    <string name="login_signup">회원가입</string>

    <string name="signup_email_hint">이메일을 입력해주세요.</string>
    <string name="signup_pw_hint">비밀번호를 입력해주세요 (6자리 이상)</string>
    <string name="signup_pw_check_hint">비밀번호를 재확인해주세요</string>
    <string name="signup_nickname_hint">닉네임을 입력해주세요 (두글자 이상)</string>
    <string name="signup_hp_hint">연락처를 입력해주세요</string>
    <string name="signup_terms_btn">개인정보 수집 및 이용약관 확인하기</string>
    <string name="terms_title">개인정보 이용약관</string>


    <string name="signup_warn_empty_email">이메일을 입력해주세요.</string>
    <string name="signup_warn_not_email_form">올바른 이메일을 입력해 주세요</string>
    <string name="signup_warn_duplicate_email">이미 가입된 이메일이에요</string>

    <string name="signup_warn_empty_pw">비밀번호를 입력해주세요</string>
    <string name="signup_warn_not_acceptable_pw">6~15자의 영문 대 소문자, 숫자 및 !@#만 사용가능합니다</string>

    <string name="signup_warn_different_with_pw">비밀번호가 일치하지 않아요</string>

    <string name="signup_warn_wrong_phone_number">전화번호를 확인해주세요</string>
    <string name="signup_warn_duplicate_phone_number">이미 가입한 전화번호예요</string>

    <string name="signup_warn_empty_nickname">닉네임을 입력해주세요</string>
    <string name="signup_warn_duplicate_nickname">이미 존재하는 닉네임이에요</string>

    <string name="signup_success">가입한 메일로 로그인해주세요</string>
    <string name="signup_signup_btn">회원가입</string>
    <string name="signup_fail_verification_code">인증코드를 확인해주세요</string>
    <string name="signup_pin_length">핀넘버는 6자리로 해주세요</string>

    <string name="signup_fail_for_server">서버이상으로 회원가입에 실패했어요. 관리자에게 문의해주세요</string>
    <string name="signup_fail_wrong_input">서버이상으로 회원가입에 실패했어요. 관리자에게 문의해주세요 </string>


    <string name="write_review_title_hint">제목을 입력하세요</string>
    <string name="write_review_content_hint">내용을 입력하세요</string>
    <string name="write_review_write_button">글쓰기</string>
    <string name="write_review_select_lens">리뷰할 렌즈를 선택해주세요</string>
    <string name="write_review_search_lens_hint">검색할 렌즈를 입력하세요</string>
    <string name="select_lens_cancel">취소</string>
    <string name="select_lens_confirm">선택</string>
    <string name="write_write_btn">등록</string>
    <string name="write_cancel">뒤로</string>
    <string name="write_review_next">다음</string>
    <string name="write_need_title">제목을 입력해주세요</string>
    <string name="write_review_empty_title">제목을 입력해주세요</string>
    <string name="write_review_empty_contents">내용을 입력해주세요</string>
    <string name="write_review_title">리뷰 작성하기</string>

    <string name="free_board">자유게시판</string>
    <string name="write_need_content">내용을 입력해주세요</string>

    <string name="child_comment_hint">대댓글을 남겨주세요</string>
    <string name="child_comment">대댓글</string>
    <string name="comment_hint">댓글을 남겨주세요</string>
    <string name="show_more_comments">+ 댓글 %1$d개 더 보기</string>

    <string name="bottom_sheet_option_delete">삭제하기</string>
    <string name="bottom_sheet_option_modify">수정하기</string>
    <string name="bottom_sheet_option_report">신고하기</string>

    <string name="mypage_actionbar_text">마이페이지</string>
    <string name="mypage_change_nickname_button">수정</string>
    <string name="mypage_change_nickname_title">닉네임 변경</string>
    <string name="mypage_change_nickname_message">닉네임을 입력하세요</string>
    <string name="mypage_change_nickname_confirm">저장</string>
    <string name="mypage_change_nickname_cancel">취소</string>

    <string name="mypage_my_review">내가 작성한 리뷰</string>
    <string name="mypage_my_article">내가 작성한 포스트</string>
    <string name="mypage_my_comments">내가 작성한 댓글</string>
    <string name="mypage_leave">회원탈퇴</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_my_review_count_header">내 리뷰</string>
    <string name="mypage_my_article_count_header">내 포스트</string>
    <string name="mypage_my_comment_count_header">내 댓글</string>
    <string name="mypage_leave_dialog_title">회원탈퇴</string>
    <string name="mypage_logout_dialog_title">로그아웃</string>
    <string name="mypage_leave_dialog_message">탈퇴 후 정보를 복구할 수 없습니다. \n계속하시겠습니까?</string>
    <string name="mypage_logout_dialog_message">로그아웃하시겠습니까?</string>
    <string name="mypage_leave_dialog_negative">취소</string>
    <string name="mypage_leave_dialog_positive">탈퇴</string>
    <string name="mypage_logout_dialog_negative">취소</string>
    <string name="mypage_logout_dialog_positive">로그아웃</string>
    <string name="mypage_leave_success_result">회원탈퇴 되었습니다.</string>
    <string name="mypage_logout_success_result">로그아웃 되었습니다.</string>
    <string name="mypage_modify_nickname_dialog_title">새로운 닉네임을 입력하세요</string>
    <string name="mypage_modify_nickname_confirm">확인</string>
    <string name="mypage_modify_nickname_cancel">취소</string>

    <string name="server_error_message">문제가 발생했어요. 관리자에게 문의해주세요.</string>


    <string name="hashtag">#</string>

</resources>
