<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.signup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailEdit"
            style="@style/signUpEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_email_hint" />

        <EditText
            android:id="@+id/pwEdit"
            style="@style/signUpEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_pw_hint" />

        <EditText
            android:id="@+id/pwCheckEdit"
            style="@style/signUpEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_pw_check_hint" />

        <EditText
            android:id="@+id/phoneNumberEdit"
            style="@style/signUpEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_hp_hint" />

        <EditText
            android:id="@+id/nicknameEdit"
            style="@style/signUpEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_nickname_hint" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="회원가입" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>