<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/searchLensText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/write_review_search_lens_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selectLensListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_gray_button"
            android:text="@string/select_lens_cancel" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_primary_button"
            android:text="@string/select_lens_confirm" />

    </LinearLayout>


</LinearLayout>