<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mypage.TabMypage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:background="@color/mypage_myinfo_container"
        android:orientation="vertical"
        android:padding="15dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:background="#3C3D42"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_modify_nickname" />

                <Button
                    android:id="@+id/changeNickname"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/mypage_change_nickname_button"
                    android:textColor="@android:color/white"
                    android:textSize="9sp" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <TextView
                    style="@style/mypageMyinfoHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mypage_my_review_count_header" />

                <TextView
                    android:id="@+id/myReviewCount"
                    style="@style/mypageMyinfoValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <TextView
                    style="@style/mypageMyinfoHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mypage_my_article_count_header" />

                <TextView
                    android:id="@+id/myArticleCount"
                    style="@style/mypageMyinfoValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/mypageMyinfoHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mypage_my_comment_count_header" />

                <TextView
                    android:id="@+id/myCommentCount"
                    style="@style/mypageMyinfoValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/myReviewListMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="7dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/mypage_my_review" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_to_right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/myArticleListMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:orientation="horizontal"

        android:padding="10dp">

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/mypage_my_article" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_to_right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/myCommentsListMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:orientation="horizontal"

        android:padding="10dp">

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/mypage_my_comments" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_to_right" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:id="@+id/leaveMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:orientation="horizontal"

        android:padding="10dp">

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/mypage_leave"
            android:textColor="@color/mypage_leave_text_color"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_to_right" />

    </LinearLayout>

</LinearLayout>