<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/board_background"
    android:orientation="vertical"
    tools:context=".ui.article.write.WriteArticleActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:paddingHorizontal="20dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal"
        android:background="@drawable/bolder">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/backBtn"
                android:text="@string/cancel"
                style="@style/writeArticleHeaderText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/writeBtn"
                android:text="@string/post"
                style="@style/writeArticleHeaderText"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">
        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textSize="20sp"
            android:background="@null"
            android:inputType="text"
            android:hint="@string/write_need_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="@color/board_background"
            android:layout_weight="1"
            android:fillViewport="true"
            android:orientation="vertical">
            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:background="@null"
                android:inputType="text"
                android:hint="@string/write_need_content" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="20dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="@drawable/bolder">
        <ImageView
            android:id="@+id/cameraImg"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            app:srcCompat="@drawable/camera" />

        <ImageView
            android:id="@+id/voteImg"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            app:srcCompat="@drawable/poll" />

        <TextView
            android:id="@+id/hashtag"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/hashtag"
            android:textStyle="bold"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/board_subtext"
            android:textSize="25sp" />
    </LinearLayout>

</RelativeLayout>